feat: add first block

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,24 +8,73 @@
     <link rel="stylesheet" href="/css/style.css">
     <title>Document</title>
 </head>
+
 <body>
+    <section class="header">
+        <section class="container">
+            <nav class="header__menu">
+                <ul>
+                    <li>Главная</li>
+                    <li>Преимущества</li>
+                    <li>Услуги и цены</li>
+                    <li>Этапы работы</li>
+                    <li>Примеры работ</li>
+                    <li>Отзывы</li>
+                    <li>Обо мне</li>
+                    <li>Контакты</li>
+                </ul>
+            </nav>
+        </section>
+    </section>
     <section class="one">
         <section class="container">
-            <section class="one__header">
-                <nav class="one__header-menu">
-                    <ul>
-                        <li>Главная</li>
-                        <li>Преимущества</li>
-                        <li>Услуги и цены</li>
-                        <li>Этапы работы</li>
-                        <li>Примеры работ</li>
-                        <li>Отзывы</li>
-                        <li>Обо мне</li>
-                        <li>Контакты</li>
-                    </ul>
-                </nav>
+            <section class="one__consultation">
+                <article class="one__phone">
+                    <img src="/images/icons/phone.png" alt="phone">
+                    <p>+375 (29) 250-82-09</p>
+                </article>
+                <button class="one__button">
+                    Бесплатная консультация
+                </button>
+            </section>
+            <section class="one__title">
+                <h2>Дом со</h2>
+                <h2>светом</h2>
+            </section>
+            <section class="one__info">
+                <h1>Проектирование электроснабжения. Монтаж.</h1>
+                <section class="one__info-right">
+                    <article class="one__info-right-block up">
+                        <div class="one__info-money-key">
+                            <img src="/images/icons/money.png" alt="money">
+                        </div>
+                        <p>Цены ниже, чем в любой проектной организации, т.к. оплата непосредственно разработчику</p>
+                    </article>
+                    <article class="one__info-right-block">
+                        <div class="one__info-money-key">
+                            <img src="/images/icons/key.png" alt="key">
+                        </div>
+                        <p>Не нужно искать монтажников. Проект и монтаж под ключ</p>
+                    </article>
+                </section>
+            </section>
+            <section class="one__futer">
+                <section class="one__futer-box">
+                    <article class="one__futer-column right">
+                        <span>14</span> лет опыта
+                    </article>
+                    <div class="one__futer-border"></div>
+                    <article class="one__futer-column center">
+                        <span>	&#62;2500</span>лет опыта
+                    </article>
+                    <div class="one__futer-border"></div>
+                    <article class="one__futer-column">
+                        <span>10</span> минут для заказа
+                    </article>
+                </section>
             </section>
         </section>
     </section>
 </body>
+
 </html>
