--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <section class="header">
+    <header class="header">
         <section class="container">
             <nav class="header__menu">
                 <ul>
@@ -25,7 +25,7 @@
                 </ul>
             </nav>
         </section>
-    </section>
+    </header>
     <section class="one">
         <section class="container">
             <section class="one__consultation">
@@ -398,7 +398,8 @@
                 <article class="reviews__column">
                     <div class="reviews__column-text">
                         <p>
-                            С Денисом сотрудничаем уже более 5 лет. За это время реализовали много совместных проектов от
+                            С Денисом сотрудничаем уже более 5 лет. За это время реализовали много совместных проектов
+                            от
                             промышленных объектов до торгово-развлекательных комплексов. Спасибо за профессионализм и
                             максимальную вовлеченность на протяжении всего проектирования и монтажа оборудования.
                         </p>
@@ -467,26 +468,106 @@
                 <article class="about__block-info-column">
                     <ul>
                         <li><span>опыт в сфере проектирования с 2008 г. Как ИП с 2013г.</span></li>
-                        <li>проектируемые объекты от мелких (дома, стройки) до крупных (производство, административные центры, трансформаторные подстанции) за все время более <span>2500 шт</span>.</li>
-                        <li>наличие всех необходимых аттестатов для проектирования <span>2-5 класса сложности</span> объектов (от дома до производства)</li>
+                        <li>проектируемые объекты от мелких (дома, стройки) до крупных (производство, административные
+                            центры, трансформаторные подстанции) за все время более <span>2500 шт</span>.</li>
+                        <li>наличие всех необходимых аттестатов для проектирования <span>2-5 класса сложности</span>
+                            объектов (от дома до производства)</li>
                         <li>еженедельно согласовываю проекты у инспекторов Энергонадзора, Энергосбыта и РЭС таких как:
-                            РЭС1-6 по г.Минску, Минского р-на, Острошицко-Городокский р-н, Заславский р-н, Дзержинский р-н, Столбцовский р-н, Смолевичский р-н, Логойский р-н, Червеньский р-н, Молодечненский р-н, Воложинский р-н, Вилейский р-н, Мядельский р-н, Пуховичский р-н, Узденский р-н</li>
+                            РЭС1-6 по г.Минску, Минского р-на, Острошицко-Городокский р-н, Заславский р-н, Дзержинский
+                            р-н, Столбцовский р-н, Смолевичский р-н, Логойский р-н, Червеньский р-н, Молодечненский р-н,
+                            Воложинский р-н, Вилейский р-н, Мядельский р-н, Пуховичский р-н, Узденский р-н</li>
                     </ul>
-                    <p>поэтому я в курсе всех изменений и актуальных требований к проекту и монтажу по этим районам электросетей,
-                        т.к. все они отличаються между собой.</p>
                 </article>
-                <article class="about__block-info-column">
+                <article class="about__block-info-column right">
                     <div class="about__block-info-circle">
-                        <div class="about__block-info-circle2">
-                            <div class="about__block-info-image">
-                                <img src="/images/img/photo.png" alt="photo">
-                            </div>
-                        </div>
+                        <div class="about__block-info-circle-dot1"></div>
+                        <div class="about__block-info-circle-dot2"></div>
+                        <div class="about__block-info-circle-dot3"></div>
+                    </div>
+                    <div class="about__block-info-circle2">
+                    </div>
+                    <div class="about__block-info-circle2-up">
+                        <div class="about__block-info-circle2-dot1"></div>
+                        <div class="about__block-info-circle2-dot2"></div>
+                        <div class="about__block-info-circle2-dot3"></div>
+                    </div>
+                    <div class="about__block-info-image">
+                        <img src="/images/img/photo.png" alt="photo">
+                    </div>
+                    <div class="about__block-info-name">
+                        Денис Пышный
                     </div>
                 </article>
             </section>
+            <p class="about__p">поэтому я в курсе всех изменений и актуальных требований к проекту и монтажу по этим
+                районам электросетей,
+                т.к. все они отличаються между собой.</p>
         </section>
     </section>
+    <section class="contacts">
+        <section class="container">
+            <div class="contacts__linea"></div>
+            <article class="contacts__box-order">
+                <h2>Контакты</h2>
+                <h3>Контакты</h3>
+            </article>
+            <section class="contacts__up-block">
+                <div class="contacts__up-block1">
+                    <div class="contacts__up-block2"></div>
+                </div>
+            </section>
+            <section class="contacts__block">
+                <section class="contacts__block-left">
+                    <article class="contacts__block-left-box">
+                        <h4>оставьте заявку</h4>
+                        <p>на бесплатную консультацию</p>
+                        <form action="URL" method="get">
+                            <p>Ваше имя</p>
+                            <input type="text" name="username" placeholder="Александр" value="">
+                            <p>Ваш телефон</p>
+                            <input type="tel" name="" placeholder="+375 (29) ___ __ __" id="">
+                            <div class="contacts__block-left-button"><button type="submit">получить консультацию</button></div>
+                        </form>
+                    </article>
+                </section>
+                <div class="contacts__block-left-blur"></div>
+                <section class="contacts__block-right">
+                    <p>ИП Пышный Денис Игоревич
+                        УНП790836120</p>
+                    <div class="contacts__block-right-tel">
+                        <div class="contacts__block-right-tel-img">
+                        </div>
+                        <p>+375 (29) 250-82-09</p>
+                    </div>
+                    <div class="contacts__block-right-email"><p>E-mail: pyshnyj@tut.by</p></div>
+                    <div class="contacts__block-right-gps">
+                        <div class="contacts__block-right-gps-img"></div>
+                        <p>Минск, пр-т Независимости, 139</p>
+                    </div>
+                    <div class="contacts__block-right-blur"></div>
+                </section>
+                <div class="contacts__block-image">
+                    <img src="/images/icons/circle.png" alt="circle">
+                </div>
+            </section>
+            <section class="contacts__bottom-block">
+                <div class="contacts__bottom-block1">
+                    <div class="contacts__bottom-block2"></div>
+                </div>
+            </section>
+        </section>
+    </section>
+    <footer class="footer">
+        <section class="container">
+            <section class="footer__box">
+                <div class="footer__ip">ИП Пышный Денис Игоревич </div>
+                <div class="footer__unp">УНП790836120 </div>
+                <div class="footer__tel">+375 (29) 250-82-09</div>
+                <div class="footer__email">E-mail: pyshnyj@tut.by</div>
+                <button>заказать звонок</button>
+            </section>
+        </section>
+    </ащщ>
 </body>
 
 </html>
