--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <section class="one__consultation">
                 <article class="one__phone">
                     <img src="/images/icons/phone.png" alt="phone">
-                    <p>+375 (29) 250-82-09</p>
+                    <p><a href="+375292508209" type="tel">+375 (29) 250-82-09</a></p>
                 </article>
                 <button class="one__button">
                     Бесплатная консультация
@@ -138,11 +138,11 @@
         </section>
     </section>
     <section class="services-and-prices" id="services-and-prices">
+        <div class="services-and-prices__bulb">
+            <img src="/images/icons/bulb.png" alt="bulb">
+        </div>
         <section class="container">
             <div class="services-and-prices__linea"></div>
-            <div class="services-and-prices__bulb">
-                <img src="/images/icons/bulb.png" alt="bulb">
-            </div>
             <article class="services-and-prices__box-services-and-prices">
                 <h2>Услуги и цены</h2>
                 <h3>Услуги и цены</h3>
@@ -230,7 +230,7 @@
                 <article class="order__step">
                     <div class="order__step-circle"></div>
                     <div class="order__step-number">1</div>
-                    <img src="/images/icons/iPhonel.png" alt="iPhone">
+                    <img src="/images/icons/iPhone1.png" alt="iPhone">
                     <p>вы звоните мне по номеру +375 (29) 250-82-09</p>
                 </article>
                 <article class="order__step">
@@ -508,8 +508,8 @@
                         <div class="contacts__block-image">
                             <img src="/images/icons/circle.png" alt="circle">
                         </div>
+                        <div class="contacts__block-left-blur"></div>
                     </article>
-                    <div class="contacts__block-left-blur"></div>
                 </section>
                 <section class="contacts__block-right">
                     <p>ИП Пышный Денис Игоревич
@@ -542,7 +542,7 @@
                 <section class="footer__box">
                     <p class="footer__ip">ИП Пышный Денис Игоревич</p>
                     <p class="footer__unp">УНП790836120</p>
-                    <p class="footer__tel">+375 (29) 250-82-09</p>
+                    <p class="footer__tel"><a href="+375292508209" type="tel">+375 (29) 250-82-09</a></p>
                     <p class="footer__email">E-mail: pyshnyj@tut.by</p>
                 </section>
                 <article class="footer__button">
